fix sponsor spacing

--- a/style.css
+++ b/style.css
@@ -6846,6 +6846,9 @@ div ~ :last-child .progress-layout2:before {
 }
 .sponsonrs-layout1 {
   text-align: center;
+  display: block; 
+  justify-content: center; 
+  align-items: center;
 }
 .sponsonrs-layout1 .sponsonrs-row-border {
   margin-bottom: 55px;
@@ -6873,11 +6876,11 @@ div ~ :last-child .progress-layout2:before {
   margin-bottom: 55px;
 }
 .sponsonrs-layout1 .sponsonrs-box a {
-  display: inline-block;
+  display: flex;
+  text-align: center;
 }
 .sponsonrs-layout1 .sponsonrs-box a img {
-  display: inline-flex;
-  max-width: 25rem;
+  display: flex;
   margin-left: 20px;
   margin-right: 20px;
   -webkit-transition: all 0.5s ease-out;
@@ -6887,9 +6890,14 @@ div ~ :last-child .progress-layout2:before {
   transition: all 0.5s ease-out;
 }
 
-.sponsonrs-layout1 .fit-image {
-  width: 100%;
-  height: 100%;
+.sponsor {
+  text-align: center;
+}
+
+.sponsor a img {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 30px;
 }
 
 
